# imgui-sdl-glad-template

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
include/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
src/: functions.h  imgui-style.h  main.cpp
